# pyuploadcare

./: .editorconfig  .flake8  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.txt  Dockerfile  Dockerfile_py36_test  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  context7.json  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  ucare  uploadcare.ini.template
.github/workflows/: build.yml  codeql.yml  publish.yml  test.yml
docs/: Makefile  cli.rst  conf.py  core_api.rst  deprecated.rst  django-widget.rst  feedback.rst  index.rst  install.rst  quickstart.rst  security_issues.rst  testing.rst
docs/api/: cli.rst  core.rst  core_usage.rst  django-widget.rst
examples/: batchDeleteOldFiles.py  delete_old_files.py
examples/signeduploads/: manage.py
examples/signeduploads/sampleapp/: apps.py  forms.py  urls.py  views.py
examples/signeduploads/signeduploads/: settings.py  urls.py  wsgi.py
examples/signeduploads/templates/sampleapp/: index.html
pyuploadcare/: __init__.py  api.py  api_requestor.py  api_resources.py  auth.py  base.py  client.py  conf.py  config.py  entities.py  exceptions.py  file.py  helpers.py  response.py  script.py  secure_url.py  tests.py  ucare_cli.py  uploader.py  utils.py
pyuploadcare/api/: __init__.py  _new_client.py  _old_client.py  addon_entities.py  api.py  auth.py  base.py  client.py  entities.py  metadata.py  response.py  responses.py  utils.py
pyuploadcare/dj/: __init__.py  client.py  conf.py  forms.py  models.py  subclassing.py  tests.py
pyuploadcare/dj/static/uploadcare/: blocks.min.js  file-uploader.min.js  lr-file-uploader-inline.min.css  lr-file-uploader-minimal.min.css  (+17 more)
pyuploadcare/dj/templatetags/: uploadcare.py
pyuploadcare/resources/: base.py  file.py  file_group.py  file_list.py  group_list.py  helpers.py  utils.py
pyuploadcare/transformations/: base.py  document.py  image.py  video.py
pyuploadcare/ucare_cli/: __init__.py  main.py  settings.py  sync.py  utils.py
pyuploadcare/ucare_cli/commands/: convert_document.py  convert_video.py  create_group.py  create_webhook.py  delete_files.py  delete_webhook.py  get_file.py  get_project.py  helpers.py  list_files.py  list_groups.py  list_webhooks.py  store_files.py  sync.py  update_webhook.py  upload.py  upload_from_url.py
test_project/: requirements.txt  settings.py  urls.py
test_project/gallery/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
test_project/templates/gallery/: form.html  result.html
tests/: conftest.py  test_api.py  test_api_requestor.py  test_api_resources.py  test_file.py  test_forms.py  test_models.py  test_pyuploadcare.py  test_ucare_cli.py  test_uploadcare.py  test_utils.py  tests.py  utils.py
tests/api_responses/: group_files.json
tests/dj/: __init__.py  test_conf.py  test_forms.py  test_models.py
tests/functional/: test_api.py  test_api_resources.py  test_client_arguments.py  test_forms.py  test_models.py  test_secure_url.py  test_ucare_cli.py  test_webhook_exceptions.py  utils.py
tests/functional/api/: test_addons.py  test_document_convert_api.py  test_metadata_api.py  test_project_api.py  test_throttling_header.py  test_upload_api.py  test_upload_api_with_metadata.py  test_video_convert_api.py  test_webhooks_api.py
tests/functional/api_responses/: from=2015-11-16T09%3A24%3A13&limit=1&sort=uploaded-time  from=2015-11-16T09%3A24%3A13.061627%2B00%3A00&limit=1&offset=0&sort=uploaded-time  from=2015-11-16T09%3A35%3A16.770971%2B00%3A00&limit=1&offset=0&sort=uploaded-time  from=2015-11-16T11%3A46%3A56.836193%2B00%3A00&limit=1&offset=0&sort=-uploaded-time  from=2015-11-16T11%3A48%3A30.136395%2B00%3A00&limit=1&offset=0&sort=-uploaded-time  from=2015-11-16T11%3A49%3A08&limit=1&sort=-uploaded-time  group_files.json  limit=1&offset=0&sort=-uploaded-time&to=2015-11-16T11%3A48%3A30.136395%2B00%3A00  limit=1&offset=0&sort=-uploaded-time&to=2015-11-16T11%3A49%3A08.285716%2B00%3A00  limit=1&offset=0&sort=uploaded-time&to=2015-11-16T09%3A20%3A57.244649%2B00%3A00  limit=1&offset=0&sort=uploaded-time&to=2015-11-16T09%3A24%3A13.061627%2B00%3A00  limit=1&sort=-uploaded-time&to=2015-11-16T11%3A48%3A30  limit=1&sort=uploaded-time&to=2015-11-16T09%3A35%3A16  list_files.json  list_groups.json  single_file.json  sort=-uploaded-time&from=2015-11-16T11%3A48%3A30.136395%2B00%3A00&limit=1&offset=0  sort=-uploaded-time&limit=1&from=2015-11-16T11%3A46%3A56.836193%2B00%3A00&offset=0  sort=-uploaded-time&limit=1&from=2015-11-16T11%3A49%3A08  sort=uploaded-time&from=2015-11-16T09%3A35%3A16.770971%2B00%3A00&limit=1&offset=0  sort=uploaded-time&limit=1&from=2015-11-16T09%3A35%3A16  sort=uploaded-time&limit=1&from=2015-11-16T09%3A36%3A57.474736%2B00%3A00&offset=0  sort=uploaded-time&to=2015-11-16T09%3A24%3A13.061627%2B00%3A00&limit=1&offset=0  sort=uploaded-time&to=2015-11-16T09%3A35%3A16&limit=1
tests/functional/cassettes/: test_acl_token_bare_url.yaml  test_acl_token_bare_uuid.yaml  test_acl_token_basic_url.yaml  test_acl_token_group_url.yaml  test_acl_token_uuid_with_transformations.yaml  test_acl_token_wildcard_uuid.yaml  test_acl_token_wildcard_uuid_with_transformations.yaml  test_url_token_basic_url.yaml  test_url_token_group_url.yaml  test_url_token_uuid_with_transformations.yaml
tests/functional/resources/: test_project.py  test_resources.py  test_webhooks.py
tests/functional/settings/: test_subdomains.py
tests/functional/transformations/: test_document.py  test_image.py  test_video.py
tests/functional/ucare_cli/: helpers.py  test_args.py  test_config_file.py  test_convert_document.py  test_convert_video.py  test_create_webhook.py  test_delete_files.py  test_delete_webhook.py  test_file_group.py  test_get_file.py  test_get_project.py  test_list_webhooks.py  test_store_files.py  test_update_webhook.py
tests/integration/: test_api_resources.py  test_helpers.py  test_models.py  utils.py
tests/integration/ucare_cli/: test_sync_files.py
tests/test_project/: manage.py  settings.py  urls.py
tests/test_project/gallery/: admin.py  models.py
tests/unit/: test_api_resources.py
(+106 files in other folders)
