[tool.poetry]
name = "pyuploadcare"
version = "5.0.0"
description = "Python library for Uploadcare.com"
authors = ["Uploadcare Inc <hello@uploadcare.com>"]
readme = "README.md"
homepage = "https://uploadcare.com"
repository = "https://github.com/uploadcare/pyuploadcare"
classifiers = [
        'Development Status :: 5 - Production/Stable',
        'Intended Audience :: Developers',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'License :: OSI Approved :: MIT License',
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/uploadcare/pyuploadcare/issues"

[tool.poetry.scripts]
ucare = 'pyuploadcare.ucare_cli.main:main'

[tool.poetry.dependencies]
python = "^3.7.0"
httpx = [
    {version = "^0.24.1", python = "<3.8"},
    {version = "^0.25.1", python = ">=3.8"}
]
pydantic = {extras = ["email"], version = "^2.5.2"}
python-dateutil = "^2.8.2"
pytz = "^2023.3.post1"
typing-extensions = [
    {version = "^4.7.1", python = "<3.8"},
    {version = "^4.9.0", python = ">=3.8"}
]
Django = {version = ">=1.11", optional = true}

[tool.poetry.extras]
django = ["Django"]

[tool.poetry.dev-dependencies]
pytest = "^7.4"
black = [
    {version = "^23.3.0", python = "<3.8"},
    {version = "^23.12.0", python = ">=3.8"}
]
isort = [
    {version = "^5.11.5", python = "<3.8"},
    {version = "^5.13.2", python = ">=3.8"}
]
flake8 = "^3.9.2"
# flake8 = "^6.1.0"
mypy = [
    {version = "^1.4.1", python = "<3.8"},
    {version = "^1.7.1", python = ">=3.8"}
]
flake8-print = "^4.0.0"
pytest-vcr = "^1.0.2"
vcrpy = [
    {version = "^4.4.0", python = "<3.8"},
    {version = "^5.1.0", python = ">=3.8"}
]
yarl = "^1.9.4"
Django = [
    {version = "^3.2.23", python = "<3.8"},
    {version = "^4.2.8", python = ">=3.8"}
]
coverage = [
    {version = "^5.5", python = "<3.8"},
    {version = "^7.3.3", python = ">=3.8"}
]
pytest-cov = "^4.1.0"
python-coveralls = "^2.9.3"
types-python-dateutil = "^2.8.19.14"
types-pytz = "^2023.3.1.1"
Sphinx = "^5.3.0"
sphinx-argparse = "^0.4.0"
types-dataclasses = "^0.6.6"
pytest-freezer = "^0.4.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py39']
exclude = '''
(
  \.eggs
  |\.git
  |\.hg
  |\.mypy_cache
  |\.nox
  |\.tox
  |\.venv
  |_build
  |buck-out
  |build
  |dist
)
'''

[tool.isort]
line_length = 79
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
src_paths = "pyuploadcare"
include_trailing_comma = "true"
lines_after_imports = 2
